--- a/Cargo.toml.liquid
+++ b/Cargo.toml.liquid
@@ -72,6 +72,9 @@ bevy = { version = "0.11", default-features = false, features = [
     "x11",
     "wav",
 ] }
+{%- if deploy_steam %}
+bevy-steamworks = { version = "0.11", optional = true }
+{%- endif -%}
 
 [features]
 default = []
@@ -85,9 +88,6 @@ inspect = [
     "pretty-type-name",
     "bevy_infinite_grid",
     "bevy-inspector-egui",
-{%- endif -%}
-{%- if deploy_steam %}
-    "bevy-steamworks"
 {%- endif -%}
 ]
 
@@ -104,14 +104,14 @@ inspect = [
     "bevy_infinite_grid",
     "bevy-inspector-egui",
 {%- endif %}
-{%- if deploy_steam %}
-    "bevy-steamworks"
-{%- endif -%}
 ]
 
 [dependencies]
 bevy.workspace = true
 log.workspace = true
+{%- if deploy_steam %}
+bevy-steamworks.workspace = true
+{%- endif -%}
 {% if enable_inspector -%}
 egui_dock = { version = "0.6", optional = true }
 egui-gizmo = { version = "0.11", optional = true }
@@ -121,7 +121,4 @@ bevy_reflect = { version = "0.11.1", optional = true }
 pretty-type-name = { version = "1.0.1", optional = true }
 bevy_infinite_grid = { version = "0.8.0", optional = true }
 bevy-inspector-egui = { version = "0.19.0", optional = true }
-{%- endif -%}
-{%- if deploy_steam %}
-bevy-steamworks = { version = "0.11", optional = true }
 {%- endif -%}
