--- a/Cargo.toml.liquid
+++ b/Cargo.toml.liquid
@@ -74,8 +74,7 @@ bevy = { version = "0.11", default-features = false, features = [
 ] }
 {%- if deploy_steam %}
 bevy-steamworks = { version = "0.11", optional = true }
-
-{%- endif -%}
+{%- endif %}
 
 [features]
 default = []
