--- a/Cargo.toml.liquid
+++ b/Cargo.toml.liquid
@@ -111,7 +111,7 @@ bevy.workspace = true
 log.workspace = true
 {%- if deploy_steam %}
 bevy-steamworks.workspace = true
-{%- endif -%}
+{%- endif %}
 {% if enable_inspector -%}
 egui_dock = { version = "0.6", optional = true }
 egui-gizmo = { version = "0.11", optional = true }
