--- a/Cargo.toml.liquid
+++ b/Cargo.toml.liquid
@@ -72,9 +72,6 @@ bevy = { version = "0.11", default-features = false, features = [
     "x11",
     "wav",
 ] }
-{%- if deploy_steam %}
-bevy-steamworks = { version = "0.11", optional = true }
-{%- endif %}
 
 [features]
 default = []
@@ -109,9 +106,6 @@ inspect = [
 [dependencies]
 bevy.workspace = true
 log.workspace = true
-{%- if deploy_steam %}
-bevy-steamworks.workspace = true
-{%- endif %}
 {% if enable_inspector -%}
 egui_dock = { version = "0.6", optional = true }
 egui-gizmo = { version = "0.11", optional = true }
@@ -121,4 +115,7 @@ bevy_reflect = { version = "0.11.1", optional = true }
 pretty-type-name = { version = "1.0.1", optional = true }
 bevy_infinite_grid = { version = "0.8.0", optional = true }
 bevy-inspector-egui = { version = "0.19.0", optional = true }
+{%- endif -%}
+{%- if deploy_steam %}
+bevy-steamworks = { version = "0.11", optional = true }
 {%- endif -%}
