--- a/Cargo.toml.liquid
+++ b/Cargo.toml.liquid
@@ -74,7 +74,11 @@ bevy = { version = "0.11", default-features = false, features = [
 ] }
 
 [features]
-default = []
+default = [
+{%- if deploy_steam %}
+    "bevy-steamworks"
+{%- endif -%}
+]
 inspect = [
 {%- if enable_inspector %}
     "bevy_egui",
@@ -85,9 +89,6 @@ inspect = [
     "pretty-type-name",
     "bevy_infinite_grid",
     "bevy-inspector-egui",
-{%- endif -%}
-{%- if deploy_steam %}
-    "bevy-steamworks"
 {%- endif -%}
 ]
 
@@ -104,9 +105,6 @@ inspect = [
     "bevy_infinite_grid",
     "bevy-inspector-egui",
 {%- endif %}
-{%- if deploy_steam %}
-    "bevy-steamworks"
-{%- endif -%}
 ]
 
 [dependencies]
