--- a/Cargo.toml.liquid
+++ b/Cargo.toml.liquid
@@ -88,6 +88,13 @@ inspect = [
 {%- endif -%}
 ]
 
+[target.'cfg(target_family = "pc")'.features]
+steam = [
+{%- if deploy_steam %}
+    "bevy-steamworks"
+{%- endif -%}
+}
+
 [target.'cfg(not(target_family = "wasm"))'.features]
 inspect = [
     "bevy/dynamic_linking",
