--- a/src/lib.rs.liquid
+++ b/src/lib.rs.liquid
@@ -47,7 +47,7 @@ pub fn app(fullscreen: bool) -> App {
 {%- endif %}
 {%- if deploy_steam %}
     app.add_plugins(steam::SteamPlugin);
-{%- endif -%}
+{%- endif %}
     app
 }
 
